<resources>
    <string name="app_name">Stage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pop_desk">桌面模式</string>
    <string name="pop_download">下载</string>
    <string name="pop_star">书签</string>
    <string name="pop_history">历史</string>
    <string name="pop_addons">附加组件</string>
    <string name="pop_setting">设置</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="layout_setting">设置</string>
    <string name="engine">搜索引擎</string>
    <string name="setting_gen">通用</string>
    <string name="search_hint">搜索或输入网址</string>
    <string name="pop_reload">刷新</string>
    <string name="pop_desktop">桌面模式</string>
    <string name="pop_video">视频</string>
    <string name="dialog_permission">权限:</string>
    <string name="baidu">https://www.baidu.com/s?wd=</string>
    <string name="advanced">高级</string>
    <string name="setting_about">关于</string>
    <string name="dia_allow">允许</string>
    <string name="dia_deny">取消</string>
    <string name="per_tabs">tabs</string>
    <string name="per_bookmarks">bookmarks</string>
    <string name="per_browserSettings">browserSettings</string>
    <string name="per_browsingData">browsingData</string>
    <string name="per_downloads">downloads</string>
    <string name="per_downloadsopen">downloads.open</string>
    <string name="per_find">find</string>
    <string name="per_geolocation">geolocation</string>
    <string name="per_history">history</string>
    <string name="per_management">management</string>
    <string name="per_nativeMessaging">nativeMessaging</string>
    <string name="per_notifications">notifications</string>
    <string name="per_pkcs11">pkcs11</string>
    <string name="per_privacy">privacy</string>
    <string name="per_proxy">proxy</string>
    <string name="per_sessions">sessions</string>
    <string name="per_topSites">topSites</string>
    <string name="per_webNavigation">webNavigation</string>
    <string name="per_clipboardWrite">clipboardWrite</string>
    <string name="per_clipboardRead">clipboardRead</string>
    <string name="per_bookmarks_cn">读取或修改书签</string>
    <string name="per_browserSettings_cn">读取或修改浏览器设置</string>
    <string name="per_browsingData_cn">清除最近的浏览历史、cookie 和相关数据</string>
    <string name="per_downloads_cn">下载文件和读取并修改浏览器的下载记录</string>
    <string name="per_downloadsopen_cn">打开下载到本地的文件</string>
    <string name="per_find_cn">读取所有打开标签的内容</string>
    <string name="per_geolocation_cn">获取您的地理位置</string>
    <string name="per_history_cn">获取浏览历史</string>
    <string name="per_management_cn">监控扩展使用和管理主题</string>
    <string name="per_nativeMessaging_cn">与 Firefox 以外的程序交换消息</string>
    <string name="per_notifications_cn">显示通知</string>
    <string name="per_pkcs11_cn">提供密码认证服务</string>
    <string name="per_privacy_cn">读取和修改隐私设置</string>
    <string name="per_proxy_cn">控制浏览器代理设置</string>
    <string name="per_sessions_cn">访问最近关闭的标签</string>
    <string name="per_tabs_cn">访问浏览器选项卡</string>
    <string name="per_topSites_cn">访问浏览历史</string>
    <string name="per_webNavigation_cn">在使用时访问浏览器活动</string>
    <string name="per_clipboardWrite_cn">向剪贴板写入数据</string>
    <string name="per_clipboardRead_cn">从剪贴板获取数据</string>
    <string name="title_activity_fragment_holder">FragmentHolder</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pop_forward">前进</string>
    <string name="about_name">Stage Browser</string>
    <string name="about_thanks">GeckoView 106</string>
    <string name="about_telegrams">加入telegrams频道</string>
    <string name="setting_protecting">开启增强型跟踪保护</string>
    <string name="google">https://www.google.com/search?q=</string>
    <string name="bing">https://www.bing.com/search?q=</string>
    <string name="sogou">https://www.sogou.com/web?query=</string>
    <string name="information_secure">连接安全</string>
    <string name="information_not_secure">连接不安全</string>
    <string name="information_protection">已开启此网站的跟踪保护</string>
    <string name="information_not_protection">已关闭此网站的跟踪保护</string>
    <string name="intent_message">网页希望打开本地应用</string>
    <string name="dia_bookmark_radio">添加到首页</string>
    <string name="dia_bookmark_url">地址：</string>
    <string name="dia_bookmark_title">名称：</string>
    <string name="dia_add_bookmark_title">添加书签</string>
    <string name="confirm">确定</string>
    <string name="cancle">取消</string>
    <string name="addons_menu_add">从addons.mozilla.org获取附加组件</string>
    <string name="addons_creator">作者:</string>
    <string name="addons_version">版本:</string>
    <string name="addons_description">简介:</string>
    <string name="safe">安全</string>
    <string name="setting_forceuserscalable">强制缩放手势</string>
    <string name="setting_FontSize">自动调整字体大小</string>
    <string name="setting_stage_about">关于 Stage</string>
    <string name="setting_feedback"><![CDATA[反馈&交流]]></string>
    <string name="user_agreement">用户协议</string>
    <string name="user_privacy">用户隐私协议</string>
    <string name="agree">同意并继续</string>
    <string name="disagree">不同意</string>
    <string name="welcom">欢迎使用Stage</string>
    <string name="welcomStory">欢迎您使用Stage浏览器，在使用前请务必仔细阅读“用户协议”与“用户隐私协议”。如果您同意，请点击同意并继续以开始接受我们的服务。</string>
    <string name="version">0.1-alpha.5(The College Dropout)</string>
    <string name="openSource">开源相关</string>
    <string name="os">开源相关</string>
    <string name="share">分享</string>
    <string name="open_out">在其他应用中打开</string>
    <string name="copy_image_url">复制地址</string>
    <string name="tab">标签</string>
    <string name="light">亮色</string>
    <string name="black">暗色</string>
    <string name="textColor">文字颜色</string>
    <string name="background">背景</string>
    <string name="defaultBg">默认</string>
    <string name="DIY">自定义</string>
    <string name="exportBookmark">导出书签</string>
    <string name="importBookmark">导入书签</string>
    <string name="deleteAllBookmark">清空</string>
</resources>