<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/diaBookmarkTitle"
            android:layout_width="0dp"
            android:layout_height="@dimen/icon3"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_white_rounded"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/diaBookmarkUrlText"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/diaBookmarkUrl"
            android:layout_width="0dp"
            android:layout_height="@dimen/icon3"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_white_rounded"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/diaBookmarkTitleText"
            app:layout_constraintTop_toBottomOf="@+id/diaBookmarkTitle" />

        <TextView
            android:id="@+id/diaBookmarkUrlText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/dia_bookmark_title"
            app:layout_constraintBottom_toBottomOf="@+id/diaBookmarkTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/diaBookmarkTitle" />

        <TextView
            android:id="@+id/diaBookmarkTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/dia_bookmark_url"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/diaBookmarkUrl" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dia_bookmark_radio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diaBookmarkUrl" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>